@@ -30,6 +30,7 @@ Version 5.2.6
 - fixed index and index column schema collections that would fail if you specified the
   any restrictions more specific than table name (bug #43991)      
 - removed a couple of unnecessary lines from NativeDriver.Open() (bug #44028)      
+- added connection string option 'use affected rows'.  (bug #44194)      
       
 Version 5.2.5 - 11/14/2008
 - fixed problem with package registration that kept the DDEX provider from working (bug #40726)
